--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,7 @@ services:
       - engnetwork
 
   producer:
-    build:
-      context: ./Producer
-      dockerfile: Dockerfile
+    image: artorius104/spark-streaming-project-producer:v1
     ports:
       - "4040:4040"
     depends_on:
@@ -58,9 +56,7 @@ services:
       - webNetwork
 
   consumer:
-    build:
-      context: ./Consumer
-      dockerfile: Dockerfile
+    image: artorius104/spark-streaming-project-consumer:v1
     ports:
       - "4041:4040"
     depends_on:
@@ -84,9 +80,7 @@ services:
       - dbNetwork
 
   streamlit:
-    build: 
-      context: ./DataVisualisation
-      dockerfile: Dockerfile
+    image: artorius104/spark-streaming-project-streamlit:v1
     ports:
       - "8501:8501"
     environment:
@@ -104,10 +98,8 @@ networks:
   # PRIV
   engnetwork:
     driver: bridge
-    internal: true
   dbNetwork:
     driver: bridge
-    internal: true
 
   # PUB
   webNetwork:
